recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:3: error: not found: value sqrt
    var newLength = length/sqrt(2)
                           ^